# geosys

./: .flake8  .gitattributes  .gitignore  Makefile  build.py  conda_pkgs.txt  pyproject.toml
geosys/: _cvt_geosys.c  china_borders.json  compile.py  cvt_geosys.mpl  cvt_geosys.py  cvt_geosys_mpl.c  io_.py  maps.py  utils.py
samples/: download_pano_by_id.sh  download_pano_by_region.sh  grab_pano_info.sh  pano_id_to_ll.sh  pano_ll_to_id.sh
samples/data/tiananmen/: region.yaml  region_panos.yaml
scripts/: download_map_pano.py  grab_region_pano_info.py  pano_id_to_ll.py  pano_ll_to_id.py
tests/: test_geosys.py
